[gd_scene load_steps=8 format=3 uid="uid://bpf4tu22a7qyg"]

[ext_resource type="Script" path="res://title_screen.gd" id="1_liguk"]
[ext_resource type="Texture2D" uid="uid://c8c47mtsior6q" path="res://art/title_bg.png" id="1_ncxtw"]
[ext_resource type="FontFile" uid="uid://05q2422m88s4" path="res://art/Equilibrist Bold.ttf" id="3_3daq2"]
[ext_resource type="FontFile" uid="uid://dia5gtcmuobst" path="res://art/Absans-Regular.otf" id="4_rmr8d"]

[sub_resource type="LabelSettings" id="LabelSettings_sih8m"]
font_size = 110
font_color = Color(0, 0, 0, 1)
outline_size = 19
shadow_size = 15
shadow_color = Color(0, 0, 0, 0.541176)
shadow_offset = Vector2(1, 15)

[sub_resource type="LabelSettings" id="LabelSettings_ajd8p"]
font = ExtResource("4_rmr8d")
font_size = 30
font_color = Color(0, 0, 0, 1)
outline_size = 7

[sub_resource type="LabelSettings" id="LabelSettings_t5nri"]
font = ExtResource("4_rmr8d")
font_size = 60
outline_size = 9
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 0.584314)
shadow_offset = Vector2(1, 5)

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_liguk")

[node name="TitleBackground" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 0
texture = ExtResource("1_ncxtw")

[node name="TitleText" type="Label" parent="TitleBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -689.5
offset_top = -301.0
offset_right = 689.5
offset_bottom = -189.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_3daq2")
theme_override_font_sizes/font_size = 110
text = "Crystalline Caverns"
label_settings = SubResource("LabelSettings_sih8m")
horizontal_alignment = 1

[node name="Label" type="Label" parent="TitleBackground/TitleText"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = 27.0
offset_right = 20.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 0
text = "Pre-Alpha 0.1"
label_settings = SubResource("LabelSettings_ajd8p")
horizontal_alignment = 1

[node name="MainMenu" type="VBoxContainer" parent="TitleBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = 10.0
offset_right = 166.0
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartText" type="Label" parent="TitleBackground/MainMenu"]
layout_mode = 2
text = "Start Game"
label_settings = SubResource("LabelSettings_t5nri")
horizontal_alignment = 1

[node name="ExitText" type="Label" parent="TitleBackground/MainMenu"]
layout_mode = 2
text = "Exit"
label_settings = SubResource("LabelSettings_t5nri")
horizontal_alignment = 1
